updated Day 3 materials

--- a/day3/day3_lecture.Rmd
+++ b/day3/day3_lecture.Rmd
@@ -3,14 +3,98 @@ title: "Day 3 Lecture"
 output: html_document
 ---
 
+# Pulling from the repo
+
+First time:
+`git clone https://github.com/shoestringpsycholing/r_programming_bsos.git`
+
+After that:
+`git pull origin master`
+
 # Some follow-up notes
 
 ## `<-` vs. `=`
+Both work!
+Not equivalent!
+
+- the arrow (`<-`) is "more idiomatic" for R
+- the single equals (`=`) is more common in other languages
+- the arrow **always** means "assignment"
+- the single equals does not mean assignment in some places (e.g., inside a function call)
+- arguments for arrow:
+  1. Visually distinctive
+  2. Always unambiguously means "assignment"
+- arguments for single equals:
+  1. Less typing
+  2. Common in many other programming languages
+- *Final recommendation*: if you have a strong preference, just use that, if not, use arrow
 
 # Notebooks vs. scripts
+Sweave: the original "reproducible document", mix of LaTeX and R
+
+R Markdown: one of the "cutting edge" formats, especially well-integrated into RStudio, that allows mixing of R code with text, document formatting, links, graphics, etc.
+
+The following is a code chunk, and when `knitr()` is run on this document, it will display both the code and the output.
+
+```{r}
+x <- rnorm(10000)
+hist(x)  # this is a histogram
+
+t.test(x)
+```
+
+You can also insert "inline" results, like the following:
+
+The mean of `x` is `r mean(x)`.
+
+Clicking on the little question mark in the RStudio GUI above this document will point you towards lots of helpful documentation on the details of Markdown and R Markdown documents.
 
 # Reading and writing data/files
-     
+## Weird file types
+Package for reading Excel data:
+  `xlsx`
+
+Package for other stats packages (SPSS, SAS, Stata):
+  `foreign`
+
+## "Reading" .RData
+`load()` puts objects in your workspace
+
+```{r eval=FALSE}
+# NOTE: this code block is marked eval = FALSE, so it will not
+#       run. This is because the files mentioned are fake, and
+#       will produce errors if run.
+mydata <- load("otherdata.RData")  # otherdata.RData contains object "foo"
+
+# mydata == "foo"
+load("otherdata.RData")  # gets "foo" into your workspace
+mydata <- foo # make a new object
+```
+
+## Look at the options!
+```{r eval=FALSE}
+?read.table
+
+mydata <- read.csv(filename, na.strings = c("NA", "N/A", "n/a", " ", "nuthin"))
+
+?readLines
+?scan
+```
+
+## Writing files
+
+```{r eval=FALSE}
+?write.table # .csv, etc.
+```
+
+Catches
+  - rownames!
+```{r eval=FALSE}
+write.table(mydata, file = "outputfile.txt", 
+            sep = "\t",   # this makes the output tab-delimited
+            row.names = FALSE)  # good for exporting data
+```
+
 # Data types
    - numeric
    - character
@@ -19,26 +103,169 @@ output: html_document
    - NA
    - NULL
    - others (e.g, "Date")
-   
+
+## Numeric
+  - numbers!
+  - sometimes integers can differ from non-integers
+  - `as.numeric()` forces it to be a number (not integers)
+  - `1L` is an integer
+  - have mean, medians
+
+## Characters
+  - `as.character()` converts to characters
+  - more primitive than factors
+  - can manipulate with regular expressions, other text functions
+  
+## Factors
+  - Actually numbers under the hood
+  - Act like numbers + labels
+  - VERY useful for many kinds of analyses
+  - if a column is a *property* of data (not a measure itself), factors are usually best
+    - groupings = good as factors
+    - conditions = good as factors
+  - if a column is *data*, maybe consider keeping it a string
+  - `as.factor()` coerces to a factor
+  - `factor()` creates a factor
+  - factors have *levels*: categories
+  - `stringsAsFactors` : option for how to read in character vectors
+    - = FALSE if you don't want to read in characters as factors
+    
+## Logicals
+  - TRUE and FALSE
+  - if coerced to `as.numeric`, TRUE == 1, FALSE == 0
+    - can take the mean of a logical vector
+  - Shortcuts: T and F
+    - *DANGER*: T and F can be overwritten
+  - logical operators create logical vectors
+    - `==`
+    - `>`
+    - `<`
+    - `|`  This is the "long bar", meaning (inclusive) "or" (aka "pipe")
+    - `&`  == "and"
+    - `>=`  greater or equal
+    - `!`  is NOT
+    - `&&` and `||`  for more specific programming sitauations
+    
+```{r}
+3 < 4
+
+sleep
+sleep$extra > 0
+
+which(sleep$extra > 0)
+
+```
+
+## NA and NULL (and others)
+  - `NA` mean "missing value" or "missing data"
+  - `NULL` means "nothing", the absence of something
+  - `Inf` and `-Inf`
+  - `NaN`
+
+Handling NAs
+  - can be a a huge pain
+  - sometimes `na.rm = TRUE` (like for `mean()`)
+```{r}
+x <- c(1, 2, NA, 4, 68)
+mean(x)
+mean(x, na.rm = TRUE)
+```
+  - sometimes it's other stuff
+  - `cor()` use = "pairwise.complete.obs"
+  - no universal "deal with NAs" argument
+
 # More subsetting
+
+## Basics
+```{r}
+sleep
+sleep[sleep$group == 1, ]
+sleep$group == 1
+sleep[which(sleep$group == 1), ]
+which(sleep$group == 1)
+sleep[sleep$group == 1 & sleep$extra > 0, ]
+sleep[sleep$group == 1 | sleep$extra > 0, ]
+# "where"
+sleep[!sleep$group == 1, ]
+
+sleep[sleep$ID == c(1, 3, 4, 6), ]  # DOESN'T WORK
+sleep[sleep$ID %in% c(1, 3, 4, 6), ]
+sleep$ID %in% c(1, 3, 4, 6)
+sleep[!sleep$ID %in% c(1, 3, 4, 6), ]  # "not in"
+
+# ?subset  # check Warning
+subset(sleep, extra > 0 & group == 2)
+# dplyr is better (IMHO)
+
+```
+
+## Catches with NAs
+
+```{r}
+x <- c(1, 2, NA, 5)
+x > 3
+
+x == NA
+is.na(x)
+# ?is.null
+
+```
 
 # Data manipulation
 
 ## Combining data frame objects
-  - rbind, cbind
-  - merge
-  
+### `rbind()` and `cbind()`
+- rbind
+    - glues rows on top of each other
+    - expects same columns
+    - new and improved `rbind_all()` and `rbind_list()` in `dplyr` package
+  - cbind
+    - glues columns next to each other
+    - need to be the same length    
+```{r}
+sleep1 <- sleep[sleep$group == 1,  ]
+sleep2 <- sleep[sleep$group == 2,  ]
+sleep1
+sleep2
+sleep.reassembled <- rbind(sleep1, sleep2)
+sleep.reassembled
+
+sleep.left <- sleep[, 1:2]
+sleep.left
+sleep.ID <- sleep[, 3]
+sleep.ID
+sleep.reassembled.2 <- cbind(sleep.left, sleep.ID)
+sleep.reassembled.2
+```
+
+### `merge()`
+```{r}
+subject.info <- data.frame(ID = 3:12, gender = c("male", "male", "female", "female", "female", "female", "male", "female", "male", "male"))
+summary(subject.info)
+
+sleep.merged <- merge(sleep, subject.info)
+sleep
+sleep.merged
+nrow(sleep)
+nrow(sleep.merged)
+
+mysleep <- sleep
+mysleep$ID <- as.numeric(mysleep$ID)
+
+sleep.merged2 <- merge(mysleep, subject.info, all = TRUE)
+sleep.merged2
+
+```
+    - simplest: have ONE column in common, named the same thing (with the same values)
+    - can get MUCH more complex
+    - `nrow()` good check on what was gained/lost during a merge
+    
 ## Creating new columns
 
-## Transforming columns
-
-## Dealing with factors
-  - levels
-  - recoding
-  - reordering
-  - droplevels
-  - as.numeric vs. as.character
-  - stringsAsFactors
-
-## Reshaping data
+```{r}
+mysleep
+mysleep$Study <- "Study1"
+mysleep$noise <- rnorm(20)
+mysleep
+```
 
