--- a/day5/day5_practice.Rmd
+++ b/day5/day5_practice.Rmd
@@ -3,36 +3,31 @@ title: "Day 5 Practice"
 output: html_document
 ---
 
-0. Start out by getting your data into "long" format.  This will help with some of the following.
+0. Get the `french_fries` data into "long" format.  Call the new value variable "rating" and the factor with all the descriptors "flavor". Re-code the labels of the `treatment` variable to be "oil1", "oil2", and "oil3".
 
-1. Pick a single numerical variable from your data.  Use `ggplot` to plot a histogram and a density plot (separately).
+1. Use `ggplot` to plot a histogram and a density plot (separately) for `rating` 
    - Try some different values for `binwidth` for the histogram.
    - Try some different values for `adjust` for the density plot.
 
 2. How does the distribution look?  Try transforming the variable and try to get it to look more normal (i.e., more Gaussian).  If it already looks normal, do something to it to make it look non-normal.
 
-3. Is there a factor that you can use to break up this variable into groups of observations?  If not, reshape your data so that there is, or create a factor if necessary.  Then, do the following:
+3. Let's break this up by the `treatment` factor
    - Plot it as a density plot, mapping `color` to the factor
    - Same, but try using `fill` instead of `color`
    - Same, using `linetype` instead of `color`
    - Plot the data as a boxplot, with the factor as `x` and the numerical variable as `y`
 
-4. Now let's look at breaking up a histogram across a factor.  With the same variables you used in #3:
+4. Now let's look at breaking up a histogram across this factor.  With the same variables you used in #3:
    - Plot a histogram, but use faceting to display them, one above the other.
    - Try mapping the factor to `color` or `fill`, to see what that looks like.
-   - Which one seems most useful or informative for your data, and why?
 
-5. Now find two numerical variables.  You may need to reshape your data.  For example, if you have one numerical variable and a "condition" factor, you could use `dcast` to spread that variable across multiple columns (one per level of the factor).  Once you have two numerical variables:
+5. Now cast the data back to where the different flavors are in differnet columns. Pick two of the flavor columns to explore
    - Create a scatterplot, with one variable mapped to `x` and the other to `y`.
    - Plot a "loess" smoother on top of the scatterplot
    - Plot a regression line on top of the scatterplot (instead of the loess)
 
-6. Are there any other factors that split up the variable plotted in #5?  If so try the following:
-   - Map the factor to `color`
-   - Facet by the factor
+6. With this same scatterplot, break it up by `treatment`
+   - Map `treatment` to `color`
+   - Facet by `treatment`
 
 7. Output all of the plots above as a single PDF.
-
-8. Is there a better type of visualization for your data?  What numbers would you like to be able to visualize better?  Be as explicit as possible, and write some "pseudo-code" to ilustrate what you think you would like.
-
-9. Save your Markdown document that answers all of these questions (with code) as well as your PDF, and commit them as changes to your git homework repository.  Push those changes to GitHub by Monday morning at 9am.
