--- a/day6/day6_lecture.Rmd
+++ b/day6/day6_lecture.Rmd
@@ -3,9 +3,9 @@ title: "Day 6"
 output: html_document
 ---
 
-# Review HW 4
+# Review HW 4 POSTPONED
 
-# Review HW 5
+# Review HW 5 POSTPONED
 
 # Loops and control
   - if else
@@ -18,11 +18,13 @@ output: html_document
 ## if/else
 
 ```{r}
-x <- 10
+x <- 2
 
 if(x > 5) {
   x <- x^2
 }
+
+if(x > 5) { x <- x^2 }
 
 if(x > 5) {
   x <- x^2
@@ -38,19 +40,85 @@ if(x > 5) {
   x <- x - 1
 }
  
+# what's the difference:
+x <- 4
+# case 1
+if(x > 5) {
+  y <- x^2
+} else if(x > 3) {
+  y <- x^3
+}
+
+# case 2
+if(x > 5) {
+  y <- x^2
+} 
+
+if(x > 3) {
+  x <- x^3
+}
+
 y <- TRUE
 
 if(y) {
   hist(rnorm(1000))
 }
 
+x <- NA
+
+if(is.na(x)) {
+  x <- 0
+}
 
 ```
 
 ## for loops
 
 ```{r}
-mydf <- data.frame(x = rnorm(n = 1000, mean = 2, sd = 1), groups = rep(1:10, each = 100))
+mydf <- data.frame(x = rnorm(n = 1000, mean = 2, sd = 1), group = rep(1:10, each = 100))
+
+rep(1:3, 3)
+rep(1:3, each = 3)
+rep(1:3, each = 3, 2)
+
+this.vector <-  mydf[mydf$group == 1, "x"]
+my.answer <- mean(this.vector)
+
+# MAKE IT A LOOP
+
+for(i in 1:10) {
+  print(i * 2)  
+}
+
+for(i in c(9, 4, 25)) {
+  print(i * 2)  
+}
+
+# Won't work, because loop needs "my.answer" to exist
+rm(my.answer)
+for(this.group in c(3,9, 5)) {
+  this.vector <-  mydf[mydf$group == this.group, "x"]
+  my.answer[this.group] <- mean(this.vector)  # subset of my.answer not available because my.answer doesn't exist
+}
+
+# Will work, but may get very sloooooow
+my.answer <- 1
+for(this.group in c(3, 9, 5)) {
+  this.vector <-  mydf[mydf$group == this.group, "x"]
+  my.answer[this.group] <- mean(this.vector)
+}
+
+# BEST PRACTICE
+my.groups <- c(3, 9, 5, 2)
+
+my.answer <- vector(length = length(my.groups))
+for(this.counter in 1:length(my.groups)) {
+  this.group <- my.groups[this.counter]
+  this.vector <- mydf[mydf$group == this.group, "x"]
+  my.answer[this.counter] <- mean(this.vector)
+}
+
+
 
 
 
